# mapper

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  build-macos.sh  build-windows-xwin.sh  build-windows.sh  build.rs  demo_terrain.sh  test_map.sh
.github/workflows/: build.yml
src/: lib.rs  main.rs  main_gui.rs  main_gui_terrain.rs  main_gui_terrain_old.rs  main_terrain.rs  main_terrain_old.rs  map_generator.rs  terrain_generator.rs  terrain_generator_new.rs  terrain_renderer.rs
src/terrain_generator/: biome.rs  climate.rs  elevation.rs  hydrology.rs  labels.rs  mod.rs  names.rs  settlements.rs  types.rs
ui/: mapper.slint
