[package]
name = "mapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mapper-cli"
path = "src/main.rs"

[[bin]]
name = "mapper-gui"
path = "src/main_gui.rs"

[[bin]]
name = "mapper-terrain-cli"
path = "src/main_terrain.rs"

[[bin]]
name = "mapper-terrain-gui"
path = "src/main_gui_terrain.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = "1.3"
noise = "0.9"
rand = "0.8"
rand_chacha = "0.3"
image = "0.24"
rusttype = "0.9"
imageproc = "0.23"

[build-dependencies]
slint-build = "1.3"